# Fifa_Dashboard

./: .gitignore  README.md  pyproject.toml  test_real_match.py
src/fifa_analytics/: validate_app.py
src/fifa_analytics/analysis/: best_xi.py  formations.py  matchup.py  scouting.py  tactics.py  xpts.py
src/fifa_analytics/assistant/: context.py  knowledge.py  llm.py
src/fifa_analytics/cards/: eafc26_datahub_importer.py  scouting_importer.py  sofifa_scraper.py
src/fifa_analytics/dashboard/: app.py  queries.py
src/fifa_analytics/db/: models.py  schema.sql
src/fifa_analytics/model/: features.py  true_overall.py
src/fifa_analytics/ocr/: calibrate.py  classify_screen.py  event_parse.py  extract.py  pipeline.py  player_match.py  preprocess.py  regions.py  team_match.py
tests/analysis/: test_best_xi.py  test_matchup.py  test_scouting.py  test_tactics.py  test_xpts.py
tests/assistant/: test_context.py  test_llm.py
tests/cards/: test_eafc26_datahub_importer.py  test_scouting_importer.py
tests/dashboard/: test_app.py  test_queries.py  test_validate_app.py
tests/db/: test_models.py
tests/model/: test_features.py  test_gk_scoring.py  test_true_overall.py
tests/ocr/: test_classify_screen.py  test_event_parse.py  test_event_rows.py  test_events_files.py  test_extract_lines.py  test_gpu_detect.py  test_hash_before_classify.py  test_match_lock.py  test_multi_event_pipeline.py  test_numeric_allowlist.py  test_player_gk_and_dedupe.py  test_player_match.py  test_regions.py  test_team_match.py
